--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-fetch": "^0.7.0",
     "apollo-link-http": "^1.5.15",
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.9.0",
     "firebase": "^6.2.4",
     "firebase-admin": "^8.2.0",
     "graphql": "^14.3.1",
