--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,13 @@
     "node": "8"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
+    "jwks-rsa": "^1.7.0",
     "xml-js": "1.6.10"
   },
   "devDependencies": {
