--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@entur/component-library": "^0.21.1",
+    "@entur/form": "^2.4.0",
+    "@entur/icons": "^0.11.0",
+    "@entur/layout": "^1.3.0",
     "apollo-boost": "^0.4.3",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
