--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@entur/form": "^2.4.0",
     "@entur/icons": "^0.11.0",
     "@entur/layout": "^1.3.0",
+    "@entur/typography": "^1.1.1",
     "apollo-boost": "^0.4.3",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
