--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "firebase-admin": "^8.2.0",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
+    "husky": "^4.2.3",
     "jquery": "^3.4.1",
     "keycloak-js": "3.4.3",
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-flatpickr": "3.9.0",
@@ -50,5 +53,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,functions}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
