--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           root: *workspace_root
           paths:
             - build/*
+            - node_modules/*
   build-functions:
     executor:
       name: node/default
@@ -60,17 +61,26 @@ jobs:
           root: *workspace_root
           paths:
             - functions/node_modules/**
-
+  deploy:
+    executor:
+      name: node/default
+      tag: '10.13'
+    steps:
+      - *attach_workspace
+      - checkout
+      - run:
+          name: "Deploy"
+          command: npm run deploy --token=$FIREBASE_TOKEN --non-interactive --only hosting
 workflows:
   "Build Pipeline":
     jobs:
       - build
       - build-functions
-      # - deploy:
-      #     context: global
-      #     filters:
-      #       branches:
-      #         only: master
-      #     requires:
-      #       - build
-      #       - build-functions
+      - deploy:
+          context: global
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
+            - build-functions
