--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,10 @@ jobs:
       - persist_to_workspace:
           root: *workspace_root
           paths:
+            - .firebaserc
+            - firebase.json
+            - firestore.indexes.json
+            - firestore.rules
             - build/*
             - node_modules/*
   build-functions:
@@ -67,7 +71,6 @@ jobs:
       tag: '10.13'
     steps:
       - *attach_workspace
-      - checkout
       - run:
           name: "Deploy"
           command: npm run deploy --token=$FIREBASE_TOKEN --non-interactive --only hosting
