--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
       - *attach_workspace
       - run:
           name: "Deploy"
-          command: npm run deploy --token=$FIREBASE_TOKEN --non-interactive --only hosting
+          command: npm run deploy --token=$FIREBASE_TOKEN --non-interactive
 workflows:
   "Build Pipeline":
     jobs:
