Persist package.json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - persist_to_workspace:
           root: *workspace_root
           paths:
+            - package.json
             - .firebaserc
             - firebase.json
             - firestore.indexes.json
