--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:functions": "jest functions",
-    "deploy": "firebase deploy -P default --only hosting"
+    "test:functions": "jest functions"
   },
   "eslintConfig": {
     "extends": "react-app"
