--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 orbs:
 #  slack: circleci/slack@1.0.0
   node: circleci/node@1.1.6
+  firebase-deploy: noyo/firebase-deploy@0.1.1
 
 references:
   workspace_root: &workspace_root
@@ -55,9 +56,10 @@ jobs:
       tag: '10.13'
     steps:
       - *attach_workspace
-      - run:
-          name: "Deploy"
-          command: node_modules/.bin/firebase deploy -P default --token=${FIREBASE_TOKEN} --non-interactive --only hosting
+      - firebase-deploy/deploy:
+          token: $FIREBASE_TOKEN
+          project: default
+          only: hosting
 workflows:
   "Build Pipeline":
     jobs:
