Remove firebase-cli devDep

--- a/package.json
+++ b/package.json
@@ -68,7 +68,5 @@
   "prettier": {
     "singleQuote": true
   },
-  "devDependencies": {
-    "firebase-cli": "^1.2.0"
-  }
+  "devDependencies": {}
 }
