Setup rewrites for functions and use same origin for auth call

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,14 @@
     ],
     "rewrites": [
       {
+        "source": "/api/xml",
+        "function": "xml"
+      },
+      {
+        "source": "/api/auth/firebase",
+        "function": "auth"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
