--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
       - *attach_workspace
       - run:
           name: "Prepare keycloak config"
-          command: cp config/keycloak-dev.json public/keycloak.json
+          command: cp config/keycloak-dev.json build/keycloak.json
       - firebase-deploy/deploy:
           token: $FIREBASE_TOKEN_DEV
           project: dev
