--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,19 @@ jobs:
       - firebase-deploy/deploy:
           token: $FIREBASE_TOKEN_STAGING
           project: staging
+  deploy-prod:
+    executor:
+      name: node/default
+      tag: '10.13'
+    steps:
+      - *attach_workspace
+      - run:
+          name: "Prepare keycloak config"
+          command: cp config/keycloak-prod.json build/keycloak.json
+      - firebase-deploy/deploy:
+          token: $FIREBASE_TOKEN_PROD
+          project: prod
+
 workflows:
   "Build Pipeline":
     jobs:
@@ -96,3 +109,14 @@ workflows:
               only: master
           requires:
             - approve-deploy-staging
+      - approve-deploy-prod:
+          type: approval
+          requires:
+            - deploy-staging
+      - deploy-prod:
+          context: global
+          filters:
+            branches:
+              only: master
+          requires:
+            - approve-deploy-prod
