--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@entur/button": "^2.2.5",
     "@entur/component-library": "^0.21.1",
     "@entur/form": "^2.4.0",
     "@entur/icons": "^0.11.0",
