--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@entur/button": "^2.2.5",
     "@entur/component-library": "^0.21.1",
+    "@entur/datepicker": "^0.3.15",
     "@entur/form": "^2.4.0",
     "@entur/icons": "^0.11.0",
     "@entur/layout": "^1.3.0",
