--- a/config/config-prod.json
+++ b/config/config-prod.json
@@ -1,4 +1,10 @@
 {
   "journey-planner-api": "https://api.entur.io/journey-planner/v2/graphql",
-  "organisations-api": "https://api.entur.io/organisations/v1/register/organisations"
+  "organisations-api": "https://api.entur.io/organisations/v1/register/organisations",
+  "auth0": {
+    "domain": "auth2.entur.org",
+    "clientId": "ggAkSCLNVPP2dUHNh3KsdZt0PjT13su7",
+    "audience": "https://ror.api.entur.io",
+    "claimsNamespace": "https://ror.entur.io/role_assignments"
+  }
 }
