Adjust api endpoints

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [
       {
-        "source": "/xml",
+        "source": "/api/xml",
         "function": "xml"
       },
       {
