--- a/config/config-prod.json
+++ b/config/config-prod.json
@@ -1,6 +1,7 @@
 {
   "journey-planner-api": "https://api.entur.io/journey-planner/v2/graphql",
   "organisations-api": "https://api.entur.io/organisations/v1/register/organisations",
+  "auth-api": "https://api.entur.io/deviation-messages/v1/auth/firebase/auth0",
   "auth0": {
     "domain": "auth2.entur.org",
     "clientId": "ggAkSCLNVPP2dUHNh3KsdZt0PjT13su7",
