--- a/config/config-staging.json
+++ b/config/config-staging.json
@@ -1,6 +1,7 @@
 {
   "journey-planner-api": "https://api.staging.entur.io/journey-planner/v2/graphql",
   "organisations-api": "https://api.staging.entur.io/organisations/v1/register/organisations",
+  "auth-api": "https://api.staging.entur.io/deviation-messages/v1/auth/firebase/auth0",
   "auth0": {
     "domain": "ror-entur-staging.eu.auth0.com",
     "clientId": "0g13z7Ah2mMxfvwSLKrkV8W2WNthuqLU",
