Pin @entur/datepicker to 0.11.3

--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["github>entur/ror-renovate-config"]
+  "extends": ["github>entur/ror-renovate-config"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["@entur/datepicker"],
+      "allowedVersions": "<=0.11.3"
+    }
+  ]
 }
