--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,11 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api/auth",
+        "function": "auth",
+        "region": "europe-west1"
       }
     ]
   },
