--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "4.6.1",
     "date-fns": "2.28.0",
     "firebase": "7.24.0",
+    "firebase-tools": "^11.16.0",
     "graphql": "14.7.0",
     "graphql-tag": "2.12.6",
     "husky": "4.3.8",
