Run npm ci in functions directory as well

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -32,6 +32,8 @@ jobs:
         continue-on-error: true
         run: npm list
       - run: npm ci
+      - working-directory: ./functions
+        run: npm ci
       - run: npm run check
       - run: npm run test -- --coverage
       - run: npm run test:functions
