--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -30,8 +30,11 @@ jobs:
         continue-on-error: true
         run: npm list
       - run: npm ci
+      - working-directory: ./functions
+        run: npm ci
       - run: npm run check
       - run: npm run test -- --coverage
+      - run: npm run test:functions
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
