--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -51,12 +51,10 @@ jobs:
       - run: npm run build
         env:
           REACT_APP_VERSION: ${{ github.sha }}
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: |
-            build
+      - name: Copy favicon
+        run: cp build/avv-d.ico build/favicon.ico
+      - name: Copy config
+        run: cp config/config-dev.json build/config.json
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
