--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@entur/form": "2.5.5",
     "@entur/icons": "0.11.0",
     "@entur/layout": "1.3.0",
+    "@entur/tokens": "3.4.1",
     "@entur/typography": "1.6.11",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
@@ -25,14 +26,15 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-flatpickr": "3.10.12",
     "react-router-dom": "5.3.3",
-    "react-scripts": "3.4.4",
+    "react-scripts": "4.0.3",
     "react-select": "3.2.0",
     "react-super-responsive-table": "5.2.1",
     "react-windowed-select": "2.0.5",
+    "sass": "1.56.1",
     "xml-js": "1.6.11"
   },
   "scripts": {
