--- a/package.json
+++ b/package.json
@@ -12,30 +12,21 @@
     "@entur/layout": "1.3.0",
     "@entur/tokens": "3.4.1",
     "@entur/typography": "1.6.11",
-    "apollo-boost": "0.4.9",
-    "apollo-cache-inmemory": "1.6.6",
-    "apollo-client": "2.6.10",
     "apollo-fetch": "0.7.0",
-    "apollo-link-http": "1.5.17",
     "bootstrap": "4.6.2",
     "date-fns": "2.29.3",
     "firebase": "7.24.0",
-    "graphql": "14.7.0",
-    "graphql-tag": "2.12.6",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
-    "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-flatpickr": "3.10.13",
     "react-router-dom": "5.3.4",
     "react-scripts": "4.0.3",
     "react-select": "3.2.0",
     "react-super-responsive-table": "5.2.1",
     "react-windowed-select": "2.0.5",
-    "sass": "1.56.1",
-    "xml-js": "1.6.11"
+    "sass": "1.56.1"
   },
   "scripts": {
     "copy:config": "cp config/config-dev.json public/config.json",
@@ -78,6 +69,8 @@
   "prettier": {
     "singleQuote": true
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-run-all": "4.1.5"
+  },
   "proxy": "http://localhost:4000"
 }
