--- a/package.json
+++ b/package.json
@@ -16,17 +16,12 @@
     "bootstrap": "4.6.2",
     "date-fns": "2.29.3",
     "firebase": "7.24.0",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "prettier": "1.19.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.4",
-    "react-scripts": "4.0.3",
     "react-select": "3.2.0",
     "react-super-responsive-table": "5.2.1",
-    "react-windowed-select": "2.0.5",
-    "sass": "1.56.1"
+    "react-windowed-select": "2.0.5"
   },
   "scripts": {
     "copy:config": "cp config/config-dev.json public/config.json",
@@ -70,7 +65,12 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "npm-run-all": "4.1.5"
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "npm-run-all": "4.1.5",
+    "prettier": "1.19.1",
+    "react-scripts": "4.0.3",
+    "sass": "1.56.1"
   },
   "proxy": "http://localhost:4000"
 }
