--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm ci
       - run: npm run check
       - run: npm run test -- --coverage
-      - run: npm run test:functions
+      - run: npm run test:functions -- --coverage --coverageDirectory functions/coverage
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
@@ -47,7 +47,7 @@ jobs:
             -Dsonar.sources=src
             -Dsonar.tests=src
             -Dsonar.test.inclusions=src/**/*.test.js
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info,functions/coverage/lcov.info
       - run: npm run build
         env:
           REACT_APP_VERSION: ${{ github.sha }}
