--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -46,7 +46,8 @@ jobs:
             -Dsonar.projectKey=entur_nirgali
             -Dsonar.sources=src
             -Dsonar.tests=src
-            -Dsonar.test.inclusions=src/**/*.test.js
+            -Dsonar.test.inclusions=**/*.test.js
+            -Dsonar.coverage.exclusions=**/*.test.js
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info,functions/coverage/lcov.info
       - run: npm run build
         env:
