--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -72,12 +72,12 @@ jobs:
         run: cp build/avv-d.ico build/favicon.ico
       - name: Copy config
         run: cp config/config-dev.json build/config.json
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: w9jds/firebase-action@v11.16.0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_DEV }}'
-          channelId: live
-          projectId: deviation-messages-dev
+          args: deploy
+        env:
+          PROJECT_ID: deviation-messages-dev
+          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_DEV }}'
   deploy_staging:
     runs-on: ubuntu-latest
     needs: [deploy_dev]
@@ -90,12 +90,12 @@ jobs:
         run: cp build/avv-s.ico build/favicon.ico
       - name: Copy config
         run: cp config/config-staging.json build/config.json
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: w9jds/firebase-action@v11.16.0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_STAGING }}'
-          channelId: live
-          projectId: deviation-messages-staging
+          args: deploy
+        env:
+          PROJECT_ID: deviation-messages-staging
+          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_STAGING }}'
   deploy_prod:
     runs-on: ubuntu-latest
     needs: [deploy_dev, deploy_staging]
@@ -108,9 +108,9 @@ jobs:
         run: cp build/avv-p.ico build/favicon.ico
       - name: Copy config
         run: cp config/config-prod.json build/config.json
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: w9jds/firebase-action@v11.16.0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_PROD }}'
-          channelId: live
-          projectId: deviation-messages-prod
+          args: deploy
+        env:
+          PROJECT_ID: deviation-messages-prod
+          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_PROD }}'
