--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -60,6 +60,7 @@ jobs:
           name: build
           path: |
             build
+            functions/node_modules
   deploy_dev:
     runs-on: ubuntu-latest
     needs: [build]
