--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -60,7 +60,6 @@ jobs:
           name: build
           path: |
             build
-            functions/node_modules
   deploy_dev:
     runs-on: ubuntu-latest
     needs: [build]
@@ -69,6 +68,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
+      - working-directory: ./functions
+        run: npm install
       - name: Copy favicon
         run: cp build/avv-d.ico build/favicon.ico
       - name: Copy config
@@ -87,6 +88,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
+      - working-directory: ./functions
+        run: npm install
       - name: Copy favicon
         run: cp build/avv-s.ico build/favicon.ico
       - name: Copy config
@@ -105,6 +108,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
+      - working-directory: ./functions
+        run: npm install
       - name: Copy favicon
         run: cp build/avv-p.ico build/favicon.ico
       - name: Copy config
