--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -66,10 +66,31 @@ jobs:
     environment: 'dev'
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - if: ${{ steps.cache-npm.outputs.cache-hit == 'false' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+      - run: npm ci
+      - working-directory: ./functions
+        run: npm ci
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-      - working-directory: ./functions
-        run: npm install
       - name: Copy favicon
         run: cp build/avv-d.ico build/favicon.ico
       - name: Copy config
@@ -86,10 +107,31 @@ jobs:
     environment: 'staging'
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - if: ${{ steps.cache-npm.outputs.cache-hit == 'false' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+      - run: npm ci
+      - working-directory: ./functions
+        run: npm ci
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-      - working-directory: ./functions
-        run: npm install
       - name: Copy favicon
         run: cp build/avv-s.ico build/favicon.ico
       - name: Copy config
@@ -106,10 +148,31 @@ jobs:
     environment: 'prod'
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - if: ${{ steps.cache-npm.outputs.cache-hit == 'false' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+      - run: npm ci
+      - working-directory: ./functions
+        run: npm ci
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-      - working-directory: ./functions
-        run: npm install
       - name: Copy favicon
         run: cp build/avv-p.ico build/favicon.ico
       - name: Copy config
