--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@entur/form": "2.5.5",
     "@entur/icons": "0.11.0",
     "@entur/layout": "1.3.0",
+    "@entur/tab": "0.4.33",
     "@entur/tokens": "3.4.1",
     "@entur/typography": "1.6.11",
     "apollo-fetch": "0.7.0",
