--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:functions": "jest functions",
-    "format": "prettier --write \"{src,functions,config}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "check": "prettier --check \"{src,functions,config}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "format": "prettier --write \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "check": "prettier --check \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -66,12 +66,17 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@types/jest": "29.2.3",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "react-scripts": "5.0.1",
-    "sass": "1.56.1"
+    "sass": "1.56.1",
+    "typescript": "4.9.3"
   },
   "proxy": "http://localhost:4000"
 }
