Upgrades all entur componets major

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,3 @@
 {
-  "extends": ["github>entur/ror-renovate-config"],
-  "packageRules": [
-    {
-      "matchPackageNames": ["@entur/datepicker"],
-      "allowedVersions": "<=0.11.3"
-    }
-  ]
+  "extends": ["github>entur/ror-renovate-config"]
 }
