--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@entur/auth-provider": "1.1.0",
     "@entur/button": "2.8.0",
-    "@entur/component-library": "0.30.0",
-    "@entur/datepicker": "0.11.3",
+    "@entur/datepicker": "3.0.8",
     "@entur/form": "5.4.11",
     "@entur/icons": "5.3.0",
     "@entur/layout": "2.1.13",
     "@entur/tab": "0.4.33",
     "@entur/tokens": "3.4.1",
+    "@entur/tooltip": "2.5.23",
     "@entur/typography": "1.6.11",
     "apollo-fetch": "0.7.0",
     "bootstrap": "4.6.2",
