--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Avviksmeldinger",
-  "name": "Avviksmeldinger",
+  "short_name": "Avvik",
+  "name": "Avvik",
   "icons": [
     {
       "src": "favicon.ico",
