--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -35,20 +35,20 @@ jobs:
       - run: npm run check
       - run: npm run test -- --coverage
       - run: npm run test:functions -- --coverage --coverageDirectory functions/coverage
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.ENTUR_SONAR_PASSWORD }}
-          SONAR_HOST_URL: https://sonarcloud.io
-        with:
-          args: >
-            -Dsonar.organization=enturas-github
-            -Dsonar.projectKey=entur_nirgali
-            -Dsonar.sources=src
-            -Dsonar.tests=src
-            -Dsonar.test.inclusions=**/*.test.js
-            -Dsonar.coverage.exclusions=**/*.test.js
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info,functions/coverage/lcov.info
+      # - name: SonarQube Scan
+      #   uses: sonarsource/sonarqube-scan-action@master
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.ENTUR_SONAR_PASSWORD }}
+      #     SONAR_HOST_URL: https://sonarcloud.io
+      #   with:
+      #     args: >
+      #       -Dsonar.organization=enturas-github
+      #       -Dsonar.projectKey=entur_nirgali
+      #       -Dsonar.sources=src
+      #       -Dsonar.tests=src
+      #       -Dsonar.test.inclusions=**/*.test.js
+      #       -Dsonar.coverage.exclusions=**/*.test.js
+      #       -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info,functions/coverage/lcov.info
       - run: npm run build
         env:
           REACT_APP_VERSION: ${{ github.sha }}
