--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eject": "react-scripts eject",
     "test:functions": "jest functions",
     "format": "prettier --write \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "check": "prettier --check \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "check": "prettier --check \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,11 +54,6 @@
       "last 1 safari version"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "{src,functions,config}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
@@ -72,7 +68,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "husky": "8.0.3",
-    "lint-staged": "13.3.0",
+    "lint-staged": "15.2.0",
     "npm-run-all": "4.1.5",
     "prettier": "3.1.1",
     "react-scripts": "5.0.1",
