--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@entur/tokens": "3.12.0",
     "@entur/tooltip": "2.6.41",
     "@entur/typography": "1.8.20",
+    "@internationalized/date": "3.5.1",
     "apollo-fetch": "0.7.0",
     "bootstrap": "5.3.2",
     "date-fns": "3.0.6",
     "firebase": "10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-select": "5.8.0",
     "react-router-dom": "6.21.1",
+    "react-select": "5.8.0",
     "react-super-responsive-table": "5.2.2",
     "react-windowed-select": "2.0.5"
   },
