--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@entur/auth-provider": "1.1.1",
     "@entur/button": "3.2.5",
     "@entur/datepicker": "9.1.1",
+    "@entur/dropdown": "5.1.2",
     "@entur/form": "7.0.32",
     "@entur/icons": "6.13.2",
     "@entur/layout": "2.1.53",
     "@entur/tab": "0.4.57",
+    "@entur/table": "4.6.35",
     "@entur/tokens": "3.12.0",
     "@entur/tooltip": "2.6.41",
     "@entur/typography": "1.8.20",
