--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:functions": "jest functions",
+    "test:functions": "jest functions --passWithNoTests",
     "format": "prettier --write \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "check": "prettier --check \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install"
