--- a/package.json
+++ b/package.json
@@ -30,14 +30,12 @@
     "copy:config": "cp config/config-dev.json public/config.json",
     "prestart": "run-p --race copy:config",
     "start": "run-p --race start:firebase start:react",
-    "start:firebase": "firebase serve -p 4000",
     "start:react": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:functions": "jest functions --passWithNoTests",
-    "format": "prettier --write \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "check": "prettier --check \"{src,functions,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format": "prettier --write \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "check": "prettier --check \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -56,7 +54,7 @@
     ]
   },
   "lint-staged": {
-    "{src,functions,config}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "{src,config}/**!(*node_modules)/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
   },
