--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -30,11 +30,8 @@ jobs:
         continue-on-error: true
         run: npm list
       - run: npm ci
-      - working-directory: ./functions
-        run: npm ci
       - run: npm run check
       - run: npm run test -- --coverage
-      - run: npm run test:functions -- --coverage --coverageDirectory functions/coverage
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
@@ -48,7 +45,7 @@ jobs:
             -Dsonar.tests=src
             -Dsonar.test.inclusions=**/*.test.js
             -Dsonar.coverage.exclusions=**/*.test.js
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info,functions/coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
       - run: npm run build
         env:
           REACT_APP_VERSION: ${{ github.sha }}
