--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -87,9 +87,9 @@ jobs:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
       - name: Copy favicon
-        run: cp build/avv-d.ico build/favicon.ico
+        run: cp .github/environments/avv-d.ico build/favicon.ico
       - name: Copy config
-        run: cp config/config-dev.json build/config.json
+        run: cp .github/environments/config-dev.json build/config.json
       - uses: w9jds/firebase-action@v13.18.0
         with:
           args: deploy
@@ -126,9 +126,9 @@ jobs:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
       - name: Copy favicon
-        run: cp build/avv-s.ico build/favicon.ico
+        run: cp .github/environments/avv-s.ico build/favicon.ico
       - name: Copy config
-        run: cp config/config-staging.json build/config.json
+        run: cp .github/environments/config-staging.json build/config.json
       - uses: w9jds/firebase-action@v13.18.0
         with:
           args: deploy
@@ -165,9 +165,9 @@ jobs:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
       - name: Copy favicon
-        run: cp build/avv-p.ico build/favicon.ico
+        run: cp .github/environments/avv-p.ico build/favicon.ico
       - name: Copy config
-        run: cp config/config-prod.json build/config.json
+        run: cp .github/environments/config-prod.json build/config.json
       - uses: w9jds/firebase-action@v13.18.0
         with:
           args: deploy
