--- a/package.json
+++ b/package.json
@@ -17,23 +17,27 @@
     "@entur/tooltip": "2.6.45",
     "@entur/typography": "1.8.23",
     "@internationalized/date": "3.5.5",
+    "@vitejs/plugin-react-swc": "3.7.0",
     "apollo-fetch": "0.7.0",
     "bootstrap": "5.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.2",
     "react-select": "5.8.1",
-    "react-super-responsive-table": "5.2.3",
-    "react-windowed-select": "5.2.0"
+    "react-super-responsive-table": "6.0.0",
+    "react-windowed-select": "5.2.0",
+    "vite": "5.4.7",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "5.0.1"
   },
   "scripts": {
     "copy:config": "cp .github/environments/config-dev.json public/config.json",
     "prestart": "run-p --race copy:config",
     "start": "run-p --race start:react",
-    "start:react": "PORT=3001 react-scripts start",
-    "build": "react-scripts build",
+    "start:react": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "format": "prettier --write \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "check": "prettier --check \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install"
@@ -73,7 +77,6 @@
     "lint-staged": "15.2.10",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
-    "react-scripts": "5.0.1",
     "sass": "1.79.3",
     "typescript": "5.6.2"
   },
