--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "start:react": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "react-scripts test",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false",
     "format": "prettier --write \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "check": "prettier --check \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install"
@@ -72,13 +73,16 @@
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/typescript-estree": "6.21.0",
+    "@vitest/coverage-v8": "2.1.1",
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "husky": "8.0.3",
+    "jsdom": "25.0.1",
     "lint-staged": "15.2.10",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
     "sass": "1.79.3",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vitest": "2.1.1"
   },
   "proxy": "http://localhost:4000"
 }
