--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm list
       - run: npm ci
       - run: npm run check
-      - run: npm run test -- --coverage
+      - run: npm run test:coverage
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
