--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage --watch=false",
+    "test:coverage": "vitest run --watch=false --coverage --coverage.reporter=lcov --reporter=vitest-sonar-reporter --outputFile.vitest-sonar-reporter=test-report.xml --reporter=default",
     "format": "prettier --write \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "check": "prettier --check \"{src,config}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install"
@@ -82,7 +82,8 @@
     "prettier": "3.3.3",
     "sass": "1.79.3",
     "typescript": "5.6.2",
-    "vitest": "2.1.1"
+    "vitest": "2.1.1",
+    "vitest-sonar-reporter": "2.0.0"
   },
   "proxy": "http://localhost:4000"
 }
