--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "react-router-dom": "6.26.2",
     "react-select": "5.8.1",
     "react-super-responsive-table": "6.0.0",
-    "react-windowed-select": "5.2.0",
-    "vite": "5.4.7",
-    "vite-plugin-svgr": "4.2.0",
-    "vite-tsconfig-paths": "5.0.1"
+    "react-windowed-select": "5.2.0"
   },
   "scripts": {
     "copy:config": "cp .github/environments/config-dev.json public/config.json",
@@ -83,7 +80,10 @@
     "sass": "1.79.3",
     "typescript": "5.6.2",
     "vitest": "2.1.1",
-    "vitest-sonar-reporter": "2.0.0"
+    "vitest-sonar-reporter": "2.0.0",
+    "vite": "5.4.7",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "5.0.1"
   },
   "proxy": "http://localhost:4000"
 }
