--- a/.github/environments/config-staging.json
+++ b/.github/environments/config-staging.json
@@ -2,10 +2,11 @@
   "deviation-messages-api": "https://api.staging.entur.io/deviation-messages/v2/graphql",
   "journey-planner-api": "https://api.staging.entur.io/journey-planner/v3/graphql",
   "stop-places-api": "https://api.staging.entur.io/stop-places/v1/read",
-  "auth0": {
-    "domain": "ror-entur-staging.eu.auth0.com",
-    "clientId": "0g13z7Ah2mMxfvwSLKrkV8W2WNthuqLU",
-    "audience": "https://ror.api.staging.entur.io",
-    "claimsNamespace": "https://ror.entur.io/role_assignments"
+  "oidcConfig": {
+    "authority": "https://ror-entur-staging.eu.auth0.com",
+    "client_id": "0g13z7Ah2mMxfvwSLKrkV8W2WNthuqLU",
+    "extraQueryParams": {
+      "audience": "https://ror.api.staging.entur.io"
+    }
   }
 }
