--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@entur/alert": "0.16.16",
-    "@entur/auth-provider": "1.1.1",
     "@entur/button": "3.2.32",
     "@entur/datepicker": "9.4.13",
     "@entur/dropdown": "5.5.1",
@@ -19,8 +18,10 @@
     "@internationalized/date": "3.5.5",
     "apollo-fetch": "0.7.0",
     "bootstrap": "5.3.3",
+    "oidc-client-ts": "3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-oidc-context": "3.1.1",
     "react-router-dom": "6.26.2",
     "react-select": "5.8.1",
     "react-super-responsive-table": "6.0.0",
@@ -72,10 +73,10 @@
     "prettier": "3.3.3",
     "sass": "1.79.3",
     "typescript": "5.6.2",
-    "vitest": "2.1.1",
-    "vitest-sonar-reporter": "2.0.0",
     "vite": "5.4.7",
     "vite-plugin-svgr": "4.2.0",
-    "vite-tsconfig-paths": "5.0.1"
+    "vite-tsconfig-paths": "5.0.1",
+    "vitest": "2.1.1",
+    "vitest-sonar-reporter": "2.0.0"
   }
 }
