Specify parameters for artifacts

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -65,6 +65,9 @@ jobs:
       - uses: actions/checkout@v5
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v6
+        with:
+          name: build
+          path: build
       - name: Copy favicon
         run: cp .github/environments/avv-d.ico build/favicon.ico
       - name: Copy config
@@ -83,6 +86,9 @@ jobs:
       - uses: actions/checkout@v5
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v6
+        with:
+          name: build
+          path: build
       - name: Copy favicon
         run: cp .github/environments/avv-s.ico build/favicon.ico
       - name: Copy config
@@ -101,6 +107,9 @@ jobs:
       - uses: actions/checkout@v5
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v6
+        with:
+          name: build
+          path: build
       - name: Copy favicon
         run: cp .github/environments/avv-p.ico build/favicon.ico
       - name: Copy config
