Fix apollo-graphql upgrade

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "7.9.5",
     "react-select": "5.10.2",
     "react-super-responsive-table": "6.0.2",
-    "react-windowed-select": "5.2.0"
+    "react-windowed-select": "5.2.0",
+    "rxjs": "7.8.2"
   },
   "scripts": {
     "copy:config": "cp .github/environments/config-dev.json public/config.json",
