Switch to the Entur Partner tenant in production environment

--- a/.github/environments/config-prod.json
+++ b/.github/environments/config-prod.json
@@ -3,8 +3,8 @@
   "journey-planner-api": "https://api.entur.io/journey-planner/v3/graphql",
   "stop-places-api": "https://api.entur.io/stop-places/v1/read",
   "oidcConfig": {
-    "authority": "https://auth2.entur.org",
-    "client_id": "ggAkSCLNVPP2dUHNh3KsdZt0PjT13su7",
+    "authority": "https://partner.entur.org",
+    "client_id": "rZnF6hNEcxWRJNa5A0arvy2bVV6Qsz29",
     "extraQueryParams": {
       "audience": "https://ror.api.entur.io"
     }
